--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^10.12.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-image-magnifiers": "^1.4.0",
+    "react-intersection-observer": "^9.4.3",
     "react-player": "^2.10.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
